word wrap to prevent UI issue for long query

--- a/styles/extension.css
+++ b/styles/extension.css
@@ -34,3 +34,9 @@
   user-select: none;
   -webkit-user-select: none;
 }
+.query{
+  text-align:left;
+  padding-left:14%;
+  cursor:pointer;
+  word-wrap: break-word;
+}
